--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=cadastramento
+
+# H2 CLIENT
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-cadastro
+server.port=9090
+
+# JPA, SQL
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+
+# DATASOURCE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./pasteis
+spring.datasource.username=root
+spring.datasource.password=1234
