--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
 		</dependency>
 
 		<dependency>
+    		<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
