--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:./pasteis
 spring.datasource.username=root
 spring.datasource.password=1234
+
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
+
