--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@ spring.application.name=cadastramento
 # H2 CLIENT
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-cadastro
-server.port=9090
 
 # JPA, SQL
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -18,5 +17,13 @@ spring.datasource.url=jdbc:h2:file:./pasteis
 spring.datasource.username=root
 spring.datasource.password=1234
 
-spring.web.resources.static-locations=classpath:/static/,file:uploads/
+# EUREKA
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.instance.hostname=localhost
 
+# SERVER PORT
+server.port=0
+
+
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
